--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:jCjAc9PPVYT5nuKb60RbNaOz+hsqO9lM6E9224CjhZg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://kowdrive.app
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=kowfile
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -47,3 +47,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FILESYSTEM_CLOUD=google
+GOOGLE_DRIVE_CLIENT_ID="351657945628-kipn3a3du34rq6qjh8vo70ns9ua6p1cr.apps.googleusercontent.com"
+GOOGLE_DRIVE_CLIENT_SECRET="PoeDvY2pxl0eYqMFalHudxm8"
+GOOGLE_DRIVE_REFRESH_TOKEN="1//043oIAMCTXk1RCgYIARAAGAQSNwF-L9IrcSP7V3zns4KpKIUqncqILWlg0F5zSxVJcC_btccddq_O-ySKC0ct0H5HTfKlB6VFwGY"
+GOOGLE_DRIVE_FOLDER_ID=1sze_VoFpCfmCcPKbhlK36aIonHvk31x-
